@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="PublicKeyRequiredException.cs" />
     <Compile Include="Translatable.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
